--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,6 @@ files:
     destination: /var/www/myapp
 hooks:
   - BeforeInstall:
-      - location: scripts.sh
+      - location: scripts2.sh
         timeout: 600
         runas: root
