--- a/.github/workflows/docker-build-run.yml
+++ b/.github/workflows/docker-build-run.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Set up Docker
+      uses: docker/setup-docker@v2
+
     - name: Build Docker image
       run: docker build -t shayok .
 
