--- a/.github/workflows/docker-build-run.yml
+++ b/.github/workflows/docker-build-run.yml
@@ -14,7 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Docker
-      uses: docker/setup-docker@v2
+      uses: actions/setup-docker@v2
+      with:
+        dockerfile: Dockerfile  # Specify the path to your Dockerfile if it's not in the root directory
 
     - name: Build Docker image
       run: docker build -t shayok .
