--- a/.github/workflows/docker-build-run.yml
+++ b/.github/workflows/docker-build-run.yml
@@ -16,6 +16,6 @@ jobs:
 
       - name: Build Docker image
         run: |
-         docker buildx shayok .
+         docker build -t  shayok .
          docker images
    #      docker run -d -p 3000:3000 shayok
